# Stark-Tutorial

./: COMPLETE_SYSTEM_SUMMARY.md  PYTHON_VS_RUST.md  ZK_PROOF_COMMANDS.txt
stark_prover_verifier/: COMMANDS.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  START_HERE.txt  main.py  proof_fib_10.json
stark_prover_verifier/cairo/: simple_fibonacci.cairo
stark_prover_verifier/src/: prover.py  verifier.py
stark_rust/: CAIRO_INTEGRATION.md  Cargo.toml  QUICKSTART.md  README.md  START_HERE.txt
stark_rust/cairo/: fibonacci.cairo  simple_computation.cairo
stark_rust/src/: computation.rs  crypto.rs  lib.rs  main.rs  prover.rs  types.rs  verifier.rs
