[package]
name = "stark-prover-verifier"
version = "0.1.0"
edition = "2021"
authors = ["STARK Team"]
description = "Educational STARK Prover and Verifier in Rust"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "stark-prover"
path = "src/main.rs"
